# work02

./: .gitignore  Makefile  README.md  config.json  generator.py  generator_v1.py  go.mod  main.go  main.py  scaffold.py  tasks.txt
XXX/: .gitignore  Cargo.toml  docker-compose.yml
XXX/.github/workflows/: ci.yml
XXX/services/ms1/: .env.example  Cargo.toml  Dockerfile
XXX/services/ms1/src/: lib.rs  main.rs
_OLD/everest_v02/services/auth-service/: Cargo.toml
_OLD/everest_v02/services/locate-service/: Cargo.toml
_OLD/everest_v07/auth-service/: Cargo.toml
_OLD/everest_v07/auth-service/config/: default.toml  development.toml
_OLD/everest_v11/services/auth-service/: Cargo.toml
_OLD/everest_v12/auth-service/: Cargo.toml
_OLD/everest_v12/auth-service/migrations/: 001_initial_schema.sql
_OLD/everest_v12/auth-service/src/: lib.rs  startup.rs
_OLD/everest_v14/_old/auth-service/: Cargo.toml
_OLD/everest_v14/_old/configurator-service/: Cargo.toml
_OLD/everest_v14/ev-charging-platform/auth-service/: Cargo.toml
everest/auth-service/: .env.example  Cargo.toml
everest/auth-service/config/: development.toml  production.toml
everest/auth-service/migrations/: 001_initial_schema.sql
everest/auth-service/src/: config.rs  error.rs  keycloak_client.rs  lib.rs  main.rs  main_v01.rs  main_v02.rs  user_repository.rs
everest/auth-service/src/application/: command_handlers.rs  commands.rs  dto.rs  errors.rs  mod.rs  query_handlers.rs  services.rs
everest/auth-service/src/domain/: entities.rs  enums.rs  errors.rs  mod.rs  repositories.rs  token_service.rs  user.rs  user_repo.rs  value_objects.rs
everest/auth-service/src/infrastructure/: audit.rs  config.rs  database.rs  errors.rs  logging.rs  mod.rs
everest/auth-service/src/interfaces/: controllers.rs  errors.rs  mod.rs  openapi.rs  routes.rs
everest/auth-service/src_v01/: main.rs
everest/auth-service/tests/integration/: auth_flow_test.rs  mod.rs
everest/auth-service/tests/unit/: application_tests.rs  domain_tests.rs  interfaces_tests.rs
everest/auth-service_v01/: Cargo.toml
everest/auth-service_v01/src/: keycloak_client.rs  main.rs  user_dto.rs  user_entity.rs  user_handler.rs  user_repository.rs  user_service.rs
everest/auth-service_v01/src/application/: user_dtos.rs
everest/auth-service_v01/src/domain/: mod.rs  password_service.rs
everest/auth-service_v01/src/infrastructure/: mod.rs
everest/configurator-service/: Cargo.toml
everest/configurator-service/config/: default.toml
everest/configurator-service/src/: error.rs  health.rs  lib.rs  main.rs
everest/configurator-service/src/api/: docs.rs  mod.rs
everest/configurator-service/src/application/: commands.rs  dtos.rs  mod.rs  queries.rs  services.rs
everest/configurator-service/src/infrastructure/: config.rs  error.rs  logger.rs
everest/ev-charging-platform/: Cargo.toml  docker-compose.yml
everest/ev-charging-platform/config/: default.toml
everest/ev-charging-platform/configurator-service/: Cargo.toml
everest/ev-charging-platform/configurator-service/migrations/: 001_initial.sql
everest/ev-charging-platform/configurator-service/src/: health.rs  lib.rs  main.rs
everest/ev-charging-platform/shared/src/: telemetry.rs  types.rs
everest/services/auth-service/: Cargo.toml  Dockerfile
everest/services/auth-service/.sqlx/: query-052d9ef8b8cb914b84497e63ec0b9ff411033276574d472d1b44a6f7a2472618.json  query-0caae9ca6afd8409f4ae79d809cea6fee463989ddd60b7b3cb71c062bbb4d598.json  query-24082c9082707f486845708b72920c30c45ac2caf5e5d9c87d31f7c247efda4d.json  query-8dabeef048f2f3ece3ddc651517766f635f2e73f4fc9dc88eb3e811655cc222d.json
everest/services/auth-service/migrations/: 001_create_system_info_table.sql  001_init.sql  01_init.sql  3.sql
everest/services/auth-service/src/: config.rs  keycloak_client.rs  lib.rs  main.rs
everest/services/auth-service/tests/: unit_test_runner.rs
everest/services/auth-service_v01/: Cargo.toml
everest/services/auth-service_v01/migrations/: 001_init.sql
everest/services/auth-service_v01/src/: lib.rs  main.rs
everest/services/locate-service/: Cargo.toml  Dockerfile
everest/services/locate-service/migrations/: 01_init.sql
everest/services/locate-service/src/: lib.rs  main.rs
everest/sources/configurator-service/: .env  Cargo.toml
everest/sources/configurator-service/src/: main.rs
everest/sources/configurator-service/tests/: integration_test_runner.rs  unit_test_runner.rs
everest_v01/auth-service/: Cargo.toml  Dockerfile  Makefile  docker-compose.yml
everest_v01/auth-service/src/: config.rs  db.rs  error.rs  errors.rs  lib.rs  logger.rs  main.rs  main_v01.rs
everest_v01/auth-service/src/application/: auth_service.rs  commands.rs  error.rs  mod.rs  queries.rs  registration_service.rs  service_traits.rs  token_service.rs
everest_v01/auth-service/src/domain/: aggregates.rs  credentials.rs  error.rs  events.rs  mod.rs  registration.rs  repository.rs  token.rs  user.rs  value_objects.rs
everest_v01/auth-service/src/infrastructure/: cache.rs  config_manager.rs  error.rs  health_check.rs  http_server.rs  keycloak_client.rs  keycloak_repository.rs  mod.rs  token_generator.rs
everest_v01/auth-service/src/interfaces/: dtos.rs  error.rs  handlers.rs  http_routes.rs  middleware.rs  mod.rs  openapi.rs  swagger.rs
everest_v01/auth-service/src/shared/: constants.rs  utils.rs
everest_v01/auth-service_v02/: Cargo.toml
everest_v01/auth-service_v02/src/interfaces/: openapi.rs
everest_v01/services/common-lib/: Cargo.toml
everest_v01/sources/auth-service/: Cargo.toml
everest_v02/auth-service/: Cargo.toml
everest_v02/auth-service/src/: main_v01.rs
everest_v03/auth-service/: Cargo.toml
everest_v03/auth-service/src/: main_v01.rs
everest_v03/auth-service_v02/: Cargo.toml
everest_v03/auth-service_v02/src/: main.rs
everest_v03/sources/auth-service/: Cargo.toml
everest_v04/services/auth-service_v01/: Cargo.toml
everest_v04/services/auth_service/: Cargo.toml
everest_v05/services/auth_service/: Cargo.toml
services_v01/configurator-service_v02/: Cargo.toml
(+2064 files in other folders)
