[workspace]
members = [
    "services/ms1",
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[workspace.package]
authors = ["M.MEZNI <mamezni@gmail.com>"]
version = "0.1.0"
edition = "2021"
