[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["json"] }
keycloak = "26.4.0"
dotenvy = "0.15.7"
