[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
# Web framework
actix-web = "4.12.1"
actix-cors = "0.7.1"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Keycloak
keycloak = "26.4.0"
reqwest = { version = "0.12.24", features = ["json"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Configuration
dotenvy = "0.15.7"

# Logging
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-actix-web = "0.7.19"

# Async trait support
async-trait = "0.1.89"


# OpenAPI/Swagger
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }

