[package]
name = "configurator-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = "0.8.6"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
