[workspace]
resolver = "2"
members = ["shared", "configurator-service", "auth-service"]

[workspace.dependencies]
actix-web = "4.12.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "migrate"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
tracing-actix-web = "0.7.19"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
config = "0.15.19"
reqwest = { version = "0.12.24", features = ["json"] }
actix-cors = "0.7.1"
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.89"
