[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-rt = "2.11.0"
actix-web = "4.12.1"
actix-web-httpauth = "0.8.2"
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
base64 = "0.22.1"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.19"
cookie = { version = "0.18.1", features = ["secure"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
envy = "0.4.2"
futures = "0.3.31"
headers = "0.4.1"
http = "1.4.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
log = "0.4.28"
mime = "0.3.17"
rand = "0.9.2"
redis = { version = "0.32.7", features = ["tokio-comp"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["macros", "migrate", "postgres", "runtime-tokio-native-tls"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-actix-web = "0.7.19"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = "2.5.7"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
