[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
anyhow = "1.0.100"
async-trait = "0.1.89"
dotenv = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
keycloak = "26.4.0"
reqwest = { version = "0.12.24", features = ["json"] }
rust-keycloak = "0.0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
