[package]
name = "configurator-service"
version = "0.1.0"
edition = "2021"
description = "EV Station Management System"
authors = ["M.MEZNI <mamezni@gmail.com>"]
license = "MIT"

[[bin]]
name = "configurator-service"
path = "src/main.rs"

[dependencies]
actix-web = "4.12.0"
actix-cors = "0.7.1"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
config = "0.15.19"
dotenvy = "0.15.7"
thiserror = "2.0.17"
log = "0.4.28"
env_logger = "0.11.8"
utoipa = "5.4.0"
strum_macros = "0.27.2"
strum = "0.27.2"
regex = "1.12.2"

[dev-dependencies]
rstest = "0.26.1"
mockall = "0.13.1"
testcontainers = "0.25.2"
