[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
description = "Authentication and Authorization Microservice with Keycloak"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
actix-web = "4.12.0"
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = { version = "0.4.42", features = ["serde"] }
bcrypt = "0.17.1"
config = "0.15.19"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
reqwest = { version = "0.12.24", features = ["json"] }
futures = "0.3.31"
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
wiremock = "0.6.5"
testcontainers = "0.25.2"

[build-dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros"] }
