[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework & Async
actix-web = "4.9.0"
actix-http = "3.7.0"
actix-service = "2.0.2"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.81"
anyhow = "1.0.86"

# Data Serialization, Validation & Documentation
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
regex = "1.10.5"

# Tracing, Logging, and Configuration
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-actix-web = "0.7.11"
dotenvy = "0.15.7"

# Database (Postgres)
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }

# Domain Errors
thiserror = "1.0.61"

# JWT & Authentication
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.5", features = ["json"] }

# API Docs
utoipa = { version = "4.2.0", features = ["actix_web"] }
utoipa-swagger-ui = { version = "4.2.0", features = ["actix-web"] }

# Password hashing
bcrypt = "0.15.0"

# HTTP client for Keycloak integration
reqwest = { version = "0.12.5", features = ["json"] }
