[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.1"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
tokio-postgres = "0.7.15"
deadpool-postgres = "0.14.1"
nanoid = "0.4.0"
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.26", features = ["json"] }
bcrypt = "0.17.1"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
base64 = "0.22.1"
regex = "1.12.2"
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = ["postgres"] }
