[package]
name = "locate-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.1"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"
thiserror = "2.0.17"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
async-trait = "0.1.89"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
nanoid = "0.4.0"
futures-util = "0.3.31"
bigdecimal = { version = "0.4.9", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json"] }
futures = "0.3.31"
dotenv = "0.15.0"
