[package]
name = "configurator-service"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clock = "0.4.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
utoipa = { version = "5.4.0", features = ["chrono", "macros", "uuid"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

