[package]
name = "configurator-service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clock = "0.4.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }

uuid = { version = "1.18.1", features = ["serde", "v4"] }

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
dotenvy = "0.15.7"


actix-web = "4.12.0"
actix-cors = "0.7.1"
actix-rt = "2.11.0"

utoipa = { version = "5.4.0", features = ["macros", "chrono", "uuid", "actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] } 
env_logger = "0.11.8"


[dev-dependencies]
serial_test = "3.2.0"  
