[package]
name = "common-lib"
version = "0.1.0"
edition = "2024"
authors = ["M.MEZNI"]
description = "Bornemap"

[features]
default = ["logging", "errors", "web"]
logging = ["tracing", "tracing-subscriber"]
errors = ["thiserror"]
web = ["actix-web", "actix-cors"]
database = ["sqlx"]
auth = ["jsonwebtoken"]
#redis = ["redis-rs"]
#messaging = ["lapin"]

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Logging & Tracing
tracing = { version = "0.1.43", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"], optional = true }
tracing-actix-web = "0.7.19"

# Error handling
thiserror = { version = "2.0.17", optional = true }
anyhow = "1.0.100"

# Web framework
actix-web = { version = "4.12.1", optional = true }
actix-cors = { version = "0.7.1", optional = true }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"], optional = true }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Auth
jsonwebtoken = { version = "10.2.0", optional = true }

# Utils
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
num_cpus = "1.17.0"