[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
async-trait = "0.1.89"
reqwest = { version = "0.12.24", features = ["json"] }
anyhow = "1.0.100"
validator = { version = "0.20.0", features = ["derive"] }
