[package]
name = "auth-service"
version = "0.1.0"
description = "Authentication service with Keycloak integration and Swagger documentation"
authors = ["M.MEZNI <xxxxxx@example.com>"]
edition = "2021"
license = "MIT"

[dependencies]
# Web Framework
actix-web = "4.12.0"
actix-cors = "0.7.1"
actix-rt = "2.11.0"

# Serialization/Deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_qs = "0.15.0"

# Configuration
config = "0.15.19"
dotenvy = "0.15.7"

# HTTP Client for Keycloak API
reqwest = { version = "0.12.24", features = ["json"] }
http = "1.3.1"

# Authentication & Crypto
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.17.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Async
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
async-trait = "0.1.89"

# Error Handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
log = "0.4.28"
env_logger = "0.11.8"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# OpenAPI/Swagger Documentation
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = "9.0.2"

# DateTime
chrono = { version = "0.4.42", features = ["serde"] }

# Keycloak-specific dependencies
keycloak = { version = "26.4.0", optional = true }  # If using keycloak crate
openssl = { version = "0.10.75", features = ["vendored"] }
