[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dotenvy = "0.15.7"
uuid = { version = "1.18.1", features = ["v4"] }
reqwest = { version = "0.12.24", features = ["json", "default-tls"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
utoipa = { version = "5.4.0", features = ["macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
tokio = { version = "1.48.0", features = ["full"] }
regex = "1.12.2"
