[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Async runtime ---
tokio = { version = "1.48.0", features = ["full"] }

# --- Web framework ---
actix-web = "4.12.0"
actix-cors = "0.7.1"
actix-http = "3.11.2"
actix-rt = "2.11.0"

# --- Serialization ---
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# --- UUID ---
uuid = { version = "1.18.1", features = ["serde", "v4"] }

# --- JWT ---
jsonwebtoken = "10.2.0"

# --- Password hashing ---
bcrypt = "0.17.1"

# --- Environment ---
dotenvy = "0.15.7"

# --- Logging ---
env_logger = "0.11.8"
log = "0.4.28"

# --- SQLX (POSTGRES) ---
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json"
] }

# --- HTTP Client (Keycloak admin) ---
reqwest = { version = "0.12.24", features = ["json"] }

# --- Time ---
chrono = { version = "0.4.42", features = ["serde"] }

# --- OpenAPI ---
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"

# --- Validation ---
validator = { version = "0.20.0", features = ["derive"] }

# --- CQRS helpers ---
async-trait = "0.1.89"

# --- Email for activation ---
lettre = { version = "0.11.19", features = ["builder", "tokio1-native-tls"] }

# --- Crypto randomness ---
rand = "0.9.2"