[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
thiserror = "2.0.17"


actix-web = { version = "4.12.0" }
serde_json = "1.0.145"
bcrypt = "0.17.1"
regex = "1.12.2"

utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
config = "0.15.19"
