[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"

[dependencies]
# Web Framework
actix-web = "4.12.1"
actix-rt = "2.11.0"

# Async Runtime
tokio = { version = "1.48.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Database
#sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# HTTP Client for Keycloak
reqwest = { version = "0.12.24", features = ["json"] }

# UUID
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4.42", features = ["serde"] }

# Error Handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-actix-web = "0.7.19"

# Configuration
config = "0.15.19"
dotenv = "0.15.0"

# JWT
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# OpenAPI/Swagger
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Async traits
async-trait = "0.1.89"
actix-web-httpauth = "0.8.2"
log = "0.4.28"

[dev-dependencies]
mockall = "0.14.0"
tokio-test = "0.4.4"
