[package]
name = "configurator_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "macros"] }
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
config = "0.15.19"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
dotenvy = "0.15.7"
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
anyhow = "1.0.100"
actix-cors = "0.7.1"
env_logger = "0.11.8"
